lib/kestrel-test-suite/testdata/memory_model/negative_conformance/not_with_regular_protocol_that_has_methods.ks
// test: diagnostics
// stdlib: false

module Test

protocol Drawable {
    func draw()
}

struct Shape: not Drawable {} // ERROR: not a language feature protocol
